Apply preliminary style

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Ribeye&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
+html {
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0.6)
+  ),
+  url(./assets/images/bgimage.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
-  font-family: "Open Sans",
-  sans-serif; 
+  font-family: 'Cabin', sans-serif; 
   font-size: 20px;
   color: #444;
   text-align: center;
@@ -14,7 +27,8 @@ body {
 nav,
 footer {
   padding: 1% 0;
-  background-color: #aaa;
+  background-color: #B0C4DE;
+  max-width: 100vw;
 }
 
 nav {
@@ -25,21 +39,32 @@ nav {
   z-index: 10;
 }
 
-
-
 header {
-  padding: 12% 0;
+  font-family: 'Ribeye', cursive;
+  padding: calc(5% + 60px) 0 5% 0;
 }
 
 section {
-  min-height: 200px;
-  padding: 6% 0;
-  background-color: #bbb;
+  /* min-height: 200px; */
+  border-radius: 10px;
+  margin: 10px 0;
+  padding: 2% 0;
+  background-color: #B0C4DE;
 }
 
-section:nth-child(even) {
-  background-color: #ddd;
+a {
+  color: #444;
+  text-decoration: none;
+  font-weight: bold;
 }
+
+a:hover, a:active {
+  color: #777;
+}
+
+/* section:nth-child(even) {
+  background-color: rgba(221, 221, 221, 0.7);
+} */
 
 ul {
   list-style-type: none;
@@ -50,4 +75,114 @@ ul {
 fieldset {
   width: max-content;
   margin: auto;
+  text-align: left;
+  border-color: #fff;
+}
+
+.duration, .location {
+  padding: 0;
+  max-width: 90vw;
+  text-align: center;
+}
+
+.add-item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.add-item input {
+  width: 20em;
+}
+
+input[type=number] {
+  width: 5em;
+}
+
+input[type=radio] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+
+  border: 2px solid #832B08;
+  transition: 0.2s;
+}
+
+input[type=radio]:checked {
+  border: 6px solid #832B08;
+}
+
+input[type=checkbox] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #832B08;
+  transition: 0.2s;
+}
+
+input[type=checkbox]:checked {
+  border: 8px solid #832B08;
+}
+
+button {
+  border: 1px solid #000;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 3px 8px;
+  background-color: #832B08;
+  color: #FAEBD7;
+}
+
+button:disabled {
+  display: none;
+}
+
+.poll-choice {
+  width: max-content;
+  margin: auto auto 30px auto;
+}
+
+@media all and (min-width: 800px) {
+  .duration {
+    padding: 0.5% 1%;
+  }
+
+  section {
+    width: 50vw;
+    margin: 10px auto;
+    padding: 2% 5%;
+    text-align: center;
+  }
+
+  .duration, .location {
+    max-width: 100%;
+  }
+
+  .add-item {
+    width: auto;
+    max-width: 100%;
+  }
+
+  .add-item input {
+    width: auto;
+    max-width: 100%;
+  }
+
+  .poll {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
+  }
+
+  .poll-choice {
+    display: inline-block;
+    width: 48%;
+  }
 }
