--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,12 @@ h3 {
   font-weight: bold;
 }
 
+.homepage-create {
+  font-family: 'Ribeye', cursive;
+  font-size: 33px;
+  font-weight: bold;
+}
+
 section {
   border-radius: 10px;
   margin: 10px 0;
